# flask-wtf

./: .coveragerc  .gitignore  .gitmodules  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.mkd  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README  README.rst  messages.pot  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tests.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: lock.yaml  tests.yaml
Flask_Uploads-0.1.2-py2.7.egg/EGG-INFO/: PKG-INFO  SOURCES.txt  requires.txt
Flask_Uploads-0.1.2-py2.7.egg/flaskext/: uploads.py
Flask_WTF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Makefile  api.rst  authors.rst  changelog.rst  changes.rst  conf.py  config.rst  csrf.rst  form.rst  index.rst  install.rst  license.rst  make.bat  quickstart.rst  upgrade.rst
docs/_templates/: brand.html  useful-links.html
docs/_themes/flask/: layout.html
docs/_themes/flask/static/: flasky.css_t
examples/: simple.py
examples/babel/: app.py
examples/babel/templates/: index.html
examples/flaskr/: README  flaskr.py  requirements.txt
examples/flaskr/templates/: login.html  show_entries.html
examples/recaptcha/: app.py
examples/recaptcha/templates/: index.html
examples/templates/: index.html
examples/uploadr/: app.py
examples/uploadr/templates/: index.html
examples/validates/: app.py
examples/validates/templates/: index.html
examples/yandex_captcha/: app.py
examples/yandex_captcha/templates/: index.html
flask_wtf/: __init__.py  _compat.py  csrf.py  file.py  form.py  html5.py  i18n.py  validates.py  wtfile.py
flask_wtf/areyouahuman/: fields.py  validators.py  widgets.py
flask_wtf/locale/: flask_wtf.pot
flask_wtf/locale/en/LC_MESSAGES/: flask_wtf.mo  flask_wtf.po
flask_wtf/locale/ru/LC_MESSAGES/: flask_wtf.mo  flask_wtf.po
flask_wtf/recaptcha/: __init__.py  fields.py  validators.py  widgets.py
flask_wtf/yandex_captcha/: __init__.py  fields.py  validators.py  widgets.py
flaskext/: wtf.py
flaskext/recaptcha/: fields.py  validators.py  widgets.py
flaskext/wtf/: __init__.py  file.py  form.py  html5.py
flaskext/wtf/recaptcha/: __init__.py  fields.py  validators.py  widgets.py
requirements/: dev.in  dev.txt  docs.txt  style.txt  tests.in  tests.txt
src/flask_wtf/: __init__.py  _compat.py  csrf.py  file.py  form.py  html5.py  i18n.py
src/flask_wtf/recaptcha/: __init__.py  fields.py  validators.py  widgets.py
tests/: __init__.py  base.py  conftest.py  flask.txt  test_csrf.py  test_csrf_extension.py  test_csrf_form.py  test_deprecated.py  test_file.py  test_form.py  test_html5.py  test_i18n.py  test_recaptcha.py  test_uploads.py  test_validates.py  test_validation.py  test_yandex_captcha.py
tests/samples/: large.txt
tests/templates/: csrf.html  csrf_macro.html  hidden.html  import_csrf.html  index.html  recaptcha.html  upload.html
