[metadata]
name = Flask-WTF
version = attr: flask_wtf.__version__
url = https://github.com/wtforms/flask-wtf/
project_urls =
    Documentation = https://flask-wtf.readthedocs.io/
    Changes = https://flask-wtf.readthedocs.io/changes/
    Source Code = https://github.com/wtforms/flask-wtf/
    Issue Tracker = https://github.com/wtforms/flask-wtf/issues/
    Chat = https://discord.gg/pallets
license = BSD-3-Clause
author = Dan Jacob
author_email = danjac354@gmail.com
maintainer = Hsiaoming Yang
maintainer_email = me@lepture.com
description = Form rendering, validation, and CSRF protection for Flask with WTForms.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    flask_wtf
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
per-file-ignores =
    # __init__ module exports names
    src/flask_wtf/__init__.py: F401
    src/flask_wtf/recaptcha/__init__.py: F401
